[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/cars/car_base.png" type="Texture" id=1]
[ext_resource path="res://scripts/cars/car.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "def"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 19.0263

[sub_resource type="CircleShape2D" id=3]
radius = 48.0

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "def"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="car" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
speed = 60.0
unlaw_chance = 0.001

[node name="car_check" type="RayCast2D" parent="."]
position = Vector2( 2, 0 )
scale = Vector2( 2, 2 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 3

[node name="spr" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="def" type="AnimationPlayer" parent="coll"]
anims/RESET = SubResource( 4 )
anims/def = SubResource( 5 )

[node name="car_check_zone" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="coll" type="CollisionShape2D" parent="car_check_zone"]
shape = SubResource( 2 )

[node name="car_crash_speed_down" type="Area2D" parent="."]
monitoring = false

[node name="coll" type="CollisionShape2D" parent="car_crash_speed_down"]
shape = SubResource( 3 )

[node name="timers" type="Node" parent="."]

[node name="change_car_check_size" type="Timer" parent="timers"]

[node name="parking_timer" type="Timer" parent="timers"]
one_shot = true

[node name="report_crash_timer" type="Timer" parent="timers"]
one_shot = true

[node name="repair_time" type="Timer" parent="timers"]
one_shot = true

[node name="on_crash_coll" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="coll" type="CollisionShape2D" parent="on_crash_coll"]
shape = SubResource( 1 )

[node name="def" type="AnimationPlayer" parent="on_crash_coll/coll"]
anims/RESET = SubResource( 6 )
anims/def = SubResource( 7 )

[connection signal="body_entered" from="car_check_zone" to="." method="_on_car_check_zone_body_entered"]
[connection signal="body_exited" from="car_check_zone" to="." method="_on_car_check_zone_body_exited"]
[connection signal="body_entered" from="car_crash_speed_down" to="." method="_on_car_crash_speed_down_body_entered"]
[connection signal="body_exited" from="car_crash_speed_down" to="." method="_on_car_crash_speed_down_body_exited"]
[connection signal="timeout" from="timers/change_car_check_size" to="." method="_on_change_car_check_size_timeout"]
[connection signal="timeout" from="timers/parking_timer" to="." method="_on_parking_timer_timeout"]
[connection signal="timeout" from="timers/report_crash_timer" to="." method="_on_report_crash_timer_timeout"]
[connection signal="timeout" from="timers/repair_time" to="." method="_on_repair_time_timeout"]
